# AgIsoStack-on-ESP32

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_osx.sh
.github/workflows/: build_on_osx.yml
components/agisostack/: CMakeLists.txt
components/iso-on-esp/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  main.cpp
